# ERNIE

./: .gitignore  .pre-commit-config.yaml  .run_ce.sh  .travis.yml  README.en.md  README.eng.md  README.md  README.zh.md  README_ENV.md  README_SOCRE.md  _ce.py  _config.yml  classify_infer.py  ernie_encoder.py  finetune_args.py  finetune_launch.py  infer_classifyer.py  optimization.py  patch  predict_classifier.py  predict_classifier_sequence.py  pretrain_args.py  pretrain_launch.py  propeller_xnli_demo.ipynb  readme_env.md  readme_model.md  readme_score.md  requirements.txt  run_classifier.py  run_classifier_sequence.py  run_mrc.py  run_sequence_labeling.py  setup.py  tokenization.py  train.py
.github/: stale.yml
erniekit_appzoo/: CHANGELOG.md  README.md  build.sh  ci.yml  requirements.txt  setup.cfg
erniekit_appzoo/erniekit_appzoo/models_hub/: download_data_aug.sh  download_ernie_2.0_large_ch.sh
erniekit_appzoo/erniekit_appzoo/tasks/data_distillation/: README.md  run_distill.sh  run_infer.py  run_trainer.py
erniekit_appzoo/erniekit_appzoo/tasks/data_distillation/data/: download_data.sh
erniekit_appzoo/erniekit_appzoo/tasks/data_distillation/distill/: download_data.sh
erniekit_appzoo/erniekit_appzoo/tasks/data_distillation/examples/: cls_cnn_ch.json
erniekit_appzoo/erniekit_appzoo/tasks/data_distillation/inference/: custom_inference.py
erniekit_appzoo/erniekit_appzoo/tasks/data_distillation/model/: cnn_classification.py
erniekit_appzoo/erniekit_appzoo/tasks/data_distillation/trainer/: custom_dynamic_trainer.py  custom_trainer.py
erniekit_appzoo/erniekit_appzoo/tasks/information_extraction_many_to_many/: README.md  run_infer.py  run_trainer.py
erniekit_appzoo/erniekit_appzoo/tasks/information_extraction_many_to_many/inference/: custom_inference.py
erniekit_appzoo/erniekit_appzoo/tasks/information_extraction_many_to_many/trainer/: custom_dynamic_trainer.py
erniekit_appzoo/erniekit_appzoo/tasks/sequence_labeling/: README.md  run_infer.py  run_trainer.py
erniekit_appzoo/erniekit_appzoo/tasks/sequence_labeling/inference/: custom_inference.py
erniekit_appzoo/erniekit_appzoo/tasks/sequence_labeling/model/: ernie_fc_sequence_label.py
erniekit_appzoo/erniekit_appzoo/tasks/sequence_labeling/trainer/: custom_dynamic_trainer.py  custom_trainer.py
erniekit_appzoo/erniekit_appzoo/tasks/text_classification/: README_BOW.md  README_CODE.md  README_ERNIE.md  README_GRID.md  README_M.md  run_trainer.py
erniekit_appzoo/erniekit_appzoo/tasks/text_classification/examples/: cls_bow_ch_infer.json  cls_ernie_fc_ch_with_data_aug.json  cls_ernie_m_1.0_base_one_sent_infer.json
erniekit_appzoo/erniekit_appzoo/tasks/text_classification/model/: base_cls.py  ernie_classification.py
erniekit_appzoo/erniekit_appzoo/tasks/text_classification/reader/: multi_label_field_reader.py
erniekit_appzoo/erniekit_appzoo/tasks/text_generation/: README.md  run_infer.py  run_trainer_ernie_gen.py
erniekit_appzoo/erniekit_appzoo/tasks/text_generation/examples/: cls_ernie_gen_infilling_ch.json  cls_ernie_gen_infilling_ch_infer.json
erniekit_appzoo/erniekit_appzoo/tasks/text_generation/inference/: custom_inference.py
erniekit_appzoo/erniekit_appzoo/tasks/text_generation/trainer/: custom_static_generation_trainer.py
erniekit_appzoo/erniekit_appzoo/tasks/text_matching/: README.md  run_infer.py  run_trainer.py
erniekit_appzoo/erniekit_appzoo/tasks/text_matching/data_set_reader/: ernie_classification_dataset_reader.py
erniekit_appzoo/erniekit_appzoo/tools/run_preprocess/: README.md  run_with_preprocess.py
(+956 files in other folders)
